login pages style updated

--- a/views/userSignup.hbs
+++ b/views/userSignup.hbs
@@ -1,6 +1,6 @@
-<div class="container d-flex flex-column justify-content-center align-items-center login-main" style="height: 80vh;">
-    <h2>User SignUp</h2>
+<div class="container-fluid d-flex flex-column justify-content-center align-items-center login-main">
     <form class="login-container">
+    <h2>User SignUp</h2>
         <div class="mb-3">
             <label for="" class="form-label">Name</label>
             <input class="form-control login-input" type="text"  aria-label="default input example">
@@ -8,7 +8,6 @@
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email address</label>
             <input type="email" class="form-control login-input" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
         <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Password</label>
