--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,15 +1,32 @@
 .login-input, .login-btn{
     height: 50px;
 }
+.login-input{
+    background-color: rgba(255, 255, 255, 0.178);
+    border: none;
+}
+.login-main{
+    background-image: url(https://img.freepik.com/free-photo/beautiful-view-greenery-bridge-forest-perfect-background_181624-17827.jpg?w=2000);
+    height: 100vh;
+}
 .login-container{
     border-radius: 20px;
-    width: 60%;
-    padding: 50px;
-    border: 1px solid rgba(128, 128, 128, 0.274);
+    width: 40%;
+    color: white;
+    padding: 30px;
+    backdrop-filter: blur(8px);
+    box-shadow: 0px 0px 10px 0px rgba(31, 31, 31,.75);
+    margin-top: -100px;
 }
 .login-main h2{
     margin-bottom: 50px;
+    text-align: center;
 }
 .login-btn{
     width: 100%;
+    background-color: #041106;
+    border: none;
+}
+.login-btn:hover{
+    background-color: #030100;
 }
