--- a/views/adminLogin.hbs
+++ b/views/adminLogin.hbs
@@ -1,10 +1,9 @@
-<div class="container d-flex flex-column justify-content-center align-items-center login-main" style="height: 80vh;">
-    <h2>Admin Login</h2>
+<div class="container-fluid d-flex flex-column justify-content-center align-items-center login-main">
     <form class="login-container">
+    <h2>Admin Login</h2>
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email address</label>
             <input type="email" class="form-control login-input" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
         <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Password</label>
