delete user completed

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,39 +1,40 @@
-.login-input, .login-btn{
-    height: 50px;
+.login-input,
+.login-btn {
+  height: 50px;
 }
-.login-input{
-    background-color: rgba(136, 136, 136, 0.178);
-    border: none;
-    color: white;
+.login-input {
+  background-color: rgba(136, 136, 136, 0.178);
+  border: none;
+  color: white;
 }
-.login-input:focus{
-    background-color: rgba(0, 0, 0, 0.322);
-    color: white;
+.login-input:focus {
+  background-color: rgba(0, 0, 0, 0.322);
+  color: white;
 }
-.login-main{
-    background-image: url(https://4kwallpapers.com/images/wallpapers/dark-background-abstract-background-network-3d-background-2048x1536-8324.png);
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
+.login-main {
+  background-image: url(https://4kwallpapers.com/images/wallpapers/dark-background-abstract-background-network-3d-background-2048x1536-8324.png);
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
 }
-.login-container{
-    border-radius: 20px;
-    width: 40%;
-    color: white;
-    padding: 30px;
-    backdrop-filter: blur(10px);
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.35);
-    margin-top: -100px;
+.login-container {
+  border-radius: 20px;
+  width: 40%;
+  color: white;
+  padding: 30px;
+  backdrop-filter: blur(10px);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.35);
+  margin-top: -100px;
 }
-.login-main h2{
-    margin-bottom: 50px;
-    text-align: center;
+.login-main h2 {
+  margin-bottom: 50px;
+  text-align: center;
 }
-.login-btn{
-    width: 100%;
-    background-color: #020203;
-    border: none;
+.login-btn {
+  width: 100%;
+  background-color: #020203;
+  border: none;
 }
-.login-btn:hover{
-    background-color: #030100;
+.login-btn:hover {
+  background-color: #030100;
 }
