--- a/views/adminHome.hbs
+++ b/views/adminHome.hbs
@@ -1,3 +1,60 @@
-<table class="table table-dark table-striped">
-  ...
-</table>
+<div class="table-main">
+  <div class="navbar">
+    <div class="col1">
+      <h3 class="text-white">Admin Panel</h3>
+    </div>
+    <div class="col2">
+      <div class="dropdown">
+        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+          aria-expanded="false">
+          Dropdown link
+        </a>
+
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">Action</a></li>
+          <li><a class="dropdown-item" href="#">Another action</a></li>
+          <li><a class="dropdown-item" href="#">Something else here</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="table-container">
+    <div class="container">
+      {{#if userDeleted}}
+      <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <strong>User Deleted</strong>
+        <a href="/admin/remove-alert" class="btn-close"></a>
+      </div>
+      {{/if}}
+      <table class="table table-dark table-striped">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Handle</th>
+          </tr>
+        </thead>
+        <tbody>
+          {{#each users}}
+          <tr>
+            <th scope="row">{{@index}}</th>
+            <td>{{this.name}}</td>
+            <td>{{this.email}}</td>
+            <td>
+              <a href="#" class="btn btn-primary">Edit</a>
+              <button class="btn btn-danger"
+                onclick="if(confirm('Are You Sure delete user ? ')){window.location.href='/admin/delete-user/{{this._id}}'}">Delete</button>
+            </td>
+          </tr>
+          {{/each}}
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+<script>
+  function deleteUser(id) {
+    console.log("id")
+  }
+</script>
