--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,6 +10,9 @@
         <link rel="stylesheet" href="/css/login.css">
         <link rel="stylesheet" href="/css/table.css">
     <title>Document</title>
+    <style>
+     
+    </style>
 </head>
 
 <body>
