--- a/views/adminHome.hbs
+++ b/views/adminHome.hbs
@@ -1,13 +1,28 @@
-<div class="table-main">
-  <div class="navbar">
-    <div class="col1">
-      <h3 class="text-white">Admin Panel</h3>
-    </div>
-    <div class="col2">
+{{!-- <nav class="navbar navbar-expand-lg bg-dak text-white row">
+  <div class="col-6">
+    <form class="d-flex" role="search">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+  </div>
+  <div class="col-6 d-flex justif-content-end">
+    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+      Dropdown button
+    </button>
+  </div>
+</nav> --}}
+<nav class="navbar  bg-dak">
+  <div class="container-fluid">
+    <form class="d-flex col-11 col-md-6 loginForm" role="search">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="font-size: .8rem;">
+      <button class="btn btn-outline-success" type="submit" style="font-size: .8rem;">Search</button>
+    </form>
+    <div class="col-md-5"></div>
+    <div class="col-1">
       <div class="dropdown">
-        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" style="font-size: .8rem; max-width:70px"
           aria-expanded="false">
-          Dropdown link
+          userde fewf ewrf
         </a>
 
         <ul class="dropdown-menu">
@@ -18,18 +33,26 @@
       </div>
     </div>
   </div>
+</nav>
+<div class="table-main">
+
   <div class="table-container">
     <div class="container">
       {{#if userDeleted}}
       <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        <strong>User Deleted</strong>
+        <strong>User Deleted successfully</strong>
+        <a href="/admin/remove-alert" class="btn-close"></a>
+      </div>
+      {{/if}}
+      {{#if userUpdated}}
+      <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <strong>User Updated Successfully</strong>
         <a href="/admin/remove-alert" class="btn-close"></a>
       </div>
       {{/if}}
       <table class="table table-dark table-striped">
         <thead>
           <tr>
-            <th scope="col">#</th>
             <th scope="col">Name</th>
             <th scope="col">Email</th>
             <th scope="col">Handle</th>
@@ -38,11 +61,10 @@
         <tbody>
           {{#each users}}
           <tr>
-            <th scope="row">{{@index}}</th>
             <td>{{this.name}}</td>
             <td>{{this.email}}</td>
             <td>
-              <a href="#" class="btn btn-primary">Edit</a>
+              <a href="/admin/update-user/{{this._id}}" class="btn btn-primary">Edit</a>
               <button class="btn btn-danger"
                 onclick="if(confirm('Are You Sure delete user ? ')){window.location.href='/admin/delete-user/{{this._id}}'}">Delete</button>
             </td>
@@ -53,8 +75,3 @@
     </div>
   </div>
 </div>
-<script>
-  function deleteUser(id) {
-    console.log("id")
-  }
-</script>
