--- a/views/userLogin.hbs
+++ b/views/userLogin.hbs
@@ -1,6 +1,7 @@
 <div class="container-fluid d-flex flex-column justify-content-center align-items-center login-main">
     <form class="login-container" method="post" action="/login">
     <h2>User Login</h2>
+        
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email address</label>
             <input type="email" class="form-control login-input" id="exampleInputEmail1" name="email" aria-describedby="emailHelp">
@@ -8,6 +9,11 @@
         <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Password</label>
             <input type="password" class="form-control login-input" name="password" id="exampleInputPassword1">
+        </div>
+        <div class="mb-3">
+            {{#if error}}
+            <b class="form-label text-danger">invalid Email or password</b>
+            {{/if}}
         </div>
         <button type="submit" class="btn btn-primary login-btn">Submit</button>
     </form>
