admin logout completed

--- a/views/adminHome.hbs
+++ b/views/adminHome.hbs
@@ -11,7 +11,7 @@
     </button>
   </div>
 </nav> --}}
-<nav class="navbar  bg-dak">
+<nav class="navbar  bg-dak fixed-top">
   <div class="container-fluid">
     <form class="d-flex col-11 col-md-6 loginForm" role="search">
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="font-size: .8rem;">
@@ -20,15 +20,13 @@
     <div class="col-md-5"></div>
     <div class="col-1">
       <div class="dropdown">
-        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" style="font-size: .8rem; max-width:70px"
+        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" style="font-size: .8rem; max-width:70px; overflow:hidden"
           aria-expanded="false">
-          userde fewf ewrf
+          uservfd vsv
         </a>
 
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">Action</a></li>
-          <li><a class="dropdown-item" href="#">Another action</a></li>
-          <li><a class="dropdown-item" href="#">Something else here</a></li>
+          <li><a class="dropdown-item" href="/admin/logout">Logout</a></li>
         </ul>
       </div>
     </div>
