--- a/views/updateUser.hbs
+++ b/views/updateUser.hbs
@@ -10,6 +10,11 @@
             <label for="exampleInputEmail1" class="form-label">Email address</label>
             <input type="email" class="form-control login-input" id="exampleInputEmail1" value={{email}} name="email" aria-describedby="emailHelp">
         </div>
+        {{#if error}}
+        <div class="mb-3">
+           <b class="text-danger">Something went Wrong</b>
+        </div>
+        {{/if}}
         <button type="submit" class="btn btn-primary login-btn">Update</button>
     </form>
 </div>
