--- a/views/adminSignup.hbs
+++ b/views/adminSignup.hbs
@@ -14,5 +14,9 @@
             <input type="password" class="form-control login-input" name="password" id="exampleInputPassword1">
         </div>
         <button type="submit" class="btn btn-primary login-btn">Submit</button>
+        <div class="container d-flex justify-content-center mt-3">
+        <a href="/admin/login">Already Have Account? Login!</a>
+    </div>
     </form>
+    
 </div>
