--- a/views/adminHome.hbs
+++ b/views/adminHome.hbs
@@ -1,32 +1,22 @@
-{{!-- <nav class="navbar navbar-expand-lg bg-dak text-white row">
-  <div class="col-6">
-    <form class="d-flex" role="search">
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success" type="submit">Search</button>
-    </form>
-  </div>
-  <div class="col-6 d-flex justif-content-end">
-    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-      Dropdown button
-    </button>
-  </div>
-</nav> --}}
-<nav class="navbar  bg-dak fixed-top">
+
+<nav class="navbar fixed-top" style="background-color: #212529;">
   <div class="container-fluid">
-    <form class="d-flex col-11 col-md-6 loginForm" role="search">
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="font-size: .8rem;">
+    <form class="d-flex col-11 col-md-3 loginForm" role="search" method="post" action="/admin/search-user/">
+      <input class="form-control me-2 search" type="search" placeholder="Search" name="key" aria-label="Search" style="font-size: .8rem; border-color:grey; color:white; background-color:rgba(0, 0, 0, 0.404);">
       <button class="btn btn-outline-success" type="submit" style="font-size: .8rem;">Search</button>
     </form>
-    <div class="col-md-5"></div>
-    <div class="col-1">
+    <div class="col-md-7"></div>
+    <div class="col-1 col-md-2 d-flex">
+      <a href="/admin/create-user" class="btn btn-outline-info d-none d-md-flex me-3"  style="font-size: .8rem;">create User</a>
       <div class="dropdown">
         <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" style="font-size: .8rem; max-width:70px; overflow:hidden"
           aria-expanded="false">
-          uservfd vsv
+          {{adminName}}
         </a>
 
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="/admin/logout">Logout</a></li>
+          <li><a class="dropdown-item  d-block d-md-none" href="/admin/create-user">create User</a></li>
         </ul>
       </div>
     </div>
@@ -53,6 +43,7 @@
           <tr>
             <th scope="col">Name</th>
             <th scope="col">Email</th>
+            <th scope="col" class="d-none d-md-block">mobile</th>
             <th scope="col">Handle</th>
           </tr>
         </thead>
@@ -61,9 +52,10 @@
           <tr>
             <td>{{this.name}}</td>
             <td>{{this.email}}</td>
+            <th class="d-none d-md-flex" style="height:65px;">{{this.mobile}}</th>
             <td>
-              <a href="/admin/update-user/{{this._id}}" class="btn btn-primary">Edit</a>
-              <button class="btn btn-danger"
+              <a href="/admin/update-user/{{this._id}}" class="btn btn-outline-primary">Edit</a>
+              <button class="btn btn-outline-danger"
                 onclick="if(confirm('Are You Sure delete user ? ')){window.location.href='/admin/delete-user/{{this._id}}'}">Delete</button>
             </td>
           </tr>
