--- a/views/updateUser.hbs
+++ b/views/updateUser.hbs
@@ -10,6 +10,10 @@
             <label for="exampleInputEmail1" class="form-label">Email address</label>
             <input type="email" class="form-control login-input" id="exampleInputEmail1" value={{email}} name="email" aria-describedby="emailHelp">
         </div>
+        <div class="mb-3">
+            <label for="exampleInputMobile" class="form-label">Mobile</label>
+            <input type="number" class="form-control login-input" value={{mobile}}  name="mobile" >
+        </div>
         {{#if error}}
         <div class="mb-3">
            <b class="text-danger">Something went Wrong</b>
