--- a/views/createUser.hbs
+++ b/views/createUser.hbs
@@ -12,14 +12,17 @@
         <div class="mb-3">
             <label for="exampleInputMobile" class="form-label">Mobile</label>
             <input type="number" class="form-control login-input"  name="mobile" >
+            {{#if numberNotValid}} 
+            <div class="form-text text-danger">{{message}}</div>
+            {{/if}}
         </div>
         <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Password</label>
             <input type="password" class="form-control login-input" name="password" id="exampleInputPassword1">
         </div>
         <div class="mb-3">
-            {{#if error}}
-            <b class="form-label text-danger">Something Went Wrong</b>
+            {{#if error}} 
+            <div class="form-text text-danger">{{message}}</div>
             {{/if}}
         </div>
         <button type="submit" class="btn btn-primary login-btn">Submit</button>
